# polars-jsonwriter-issue-demo

./: Cargo.toml  README.md  demo.parquet
src/: main.rs
