[package]
name = "polars-jsonwriter-issue-demo"
version = "0.0.1"
edition = "2021"
rust-version = "1.71"

[dependencies]
polars = { version = "0.32.1", features = [
    "json",
    "lazy",
    "parquet",
    "polars-io",
    "serde",
    "serde-lazy",
    "temporal"
    ]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105" }
